# ml-dashboard

./: .gitignore  LICENSE  _TEST_efficient_fixed_resampling.ipynb  _TEST_testapp.py  _TEST_update_callb_prototypes.py  _TEST_y_axis_ranges.py  _TOOL_plotlytemplate_creator.ipynb  _TOOL_plotlytemplate_creator.py  custom_template.json  example_dataset.h5  example_run_script.py  example_run_training_loop.py  figure.json  pyproject.toml  requirements.txt  run_script_test.py  test.ipynb  testapp.py
assets/: stylechange.css
ml_dashboard/: __init__.py  plotter.py
ml_dashboard/dash/: __init__.py  dashapp.py
ml_dashboard/dash/assets/: stylechange.css
ml_dashboard/dash/components/: __init__.py  callbacks.py  cards.py  graphs.py
ml_dashboard/utils/: __init__.py  sanitize_options.py  training_metrics.py  utils.py
mldashboard/: __init__.py  plotter.py
mldashboard/config/: coreconfig.py
mldashboard/containers/: config.py  datastore.py  name2id.py  name2trace.py  setupconfig.py
mldashboard/dash/: __init__.py  dashapp.py
mldashboard/dash/assets/: fonts.css  stylechange.css
mldashboard/dash/components/: callbacks.py  graphs.py
mldashboard/utils/: __init__.py  sanitize_options.py
tests/: idea_trainer_api.py  run_script.py  run_training_loop.py  test.py
tests/units/: name2id.py  test_datastore.py  test_setupconfig.py  tets_config.py
